# discord-tools

./: .buildinfo  .pre-commit-config.yaml  LICENSE  README.md  discord.atomistic.html  discord.html  discord.parameters.html  discord.scattering.html  environment.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: discord.atomistic.doctree  discord.doctree  discord.parameters.doctree  discord.scattering.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/source/: discord.atomistic.doctree  discord.doctree  discord.parameters.doctree  discord.scattering.doctree  modules.doctree
.github/: copilot-instructions.md
.github/agents/: docs_verification.md
.github/workflows/: build-and-deploy-docs.yml  conda-ci.yml
_modules/: index.html
_modules/discord/: material.html
_modules/discord/atomistic/: kernel.html  simulation.html
_modules/discord/parameters/: tables.html
_modules/discord/scattering/: intensity.html
_sources/: discord.rst.txt  modules.rst.txt
_sources/source/: discord.atomistic.rst.txt  discord.parameters.rst.txt  discord.scattering.rst.txt
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
examples/: MnF2.py
source/: discord.atomistic.html  discord.html  discord.parameters.html  discord.scattering.html  modules.html
src/discord/: _version.py  material.py  visualization.py
src/discord/atomistic/: correlations.py  kernel.py  simulation.py
tests/: test_intensity.py  test_material.py  test_simulation.py
(+5 files in other folders)
